# labelling_tool

./: README.md  main.py  pyproject.toml
src/labelling_tool/: __main__.py  data_saver.py  path_finder.py
src/labelling_tool/models/: task.py
src/labelling_tool/ui/: file_loader.py  main_window.py  task.py  video_player.py
